# mqa-data

./: Comparision_EPdecay.ipynb  README.md  mirror_qa_topo.ipynb  mqa-custom.ipynb  mqa-hardware.ipynb  mqa-stab.ipynb  mrb-custom.ipynb  mrb-hardware.ipynb  mrb-stab.ipynb  pyproject.toml  tmqa-fake.ipynb  tmqa-hardware.ipynb  tmqa-simul.ipynb
CustomNoisyBackend/mqa-custom-noisy-backend/: mmi_data_null_angle.csv  mmi_data_pi_over_4.csv  noisy-backend-angle-graph.ipynb
StabilizerBackend/mqa-stabilizer-p-curves/: error_rates_graph.ipynb
ibm_miami/d8c904qjki0s73aqstug/: circuit_0.json  circuit_1.json  circuit_10.json  circuit_11.json  circuit_12.json  circuit_13.json  circuit_14.json  circuit_15.json  circuit_16.json  circuit_17.json  circuit_18.json  circuit_19.json  circuit_2.json  circuit_20.json  circuit_21.json  circuit_22.json  circuit_23.json  circuit_24.json  circuit_25.json  circuit_26.json  circuit_27.json  circuit_28.json  circuit_29.json  circuit_3.json  circuit_30.json  circuit_31.json  circuit_32.json  circuit_33.json  circuit_34.json  circuit_35.json  circuit_36.json  circuit_37.json  circuit_38.json  circuit_39.json  circuit_4.json  circuit_40.json  (+65 more)
mqa-custom-noisy-backend/: mirror_qa.ipynb  mmi_data_pi_over_2.csv  mmi_data_pi_over_2_density_1.csv
mqa-real-fez-whole-pi-over-2/: mqa-real-fez-whole-pi-over-2.ipynb
mqa-real-fez-whole-pi-over-4/: mqa_real_fez_156_pi_over_4.ipynb
mqa-stab-fez-whole-pi-over-2/: mqa_stab_fez_whole_pi_over_2.ipynb
topo_ckpt/: miami_results_bot_0-90.pkl  miami_results_bot_0-94.pkl  miami_results_readout_False.pkl
(+2032 files in other folders)
